src/test/deca/context/invalid/created/cast/boolean_A.deca
// Description :
//    test cast entre un boolean et A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>
	

class A {}
{
(boolean)(new A());
}
